Makefile changes for debugging purposes (line numbers in Valgrind)

--- a/db/Makefile
+++ b/db/Makefile
@@ -2,7 +2,7 @@
 # Makefile for "TPC-C"					DDBMS
 
 # Standard compiler options
-CFLAGS =  -g3 -std=c99 -pedantic -Wall
+CFLAGS =  -g3
 
 all:    TPC-C
 
@@ -12,12 +12,15 @@ TPC-C:  tpc_c.o new_order.o payment.o ../loadgen/loadgen.o
 
 # Rule to create tpc_c.o (link library header file)
 tpc_c.o: tpc_c.cc tpc_c.h
+	${CXX} -c ${CFLAGS} $^
 
 # Rule to create new_order.o (link library header file)
 new_order.o: new_order.cc tpc_c.h
+	${CXX} -c ${CFLAGS} $^
 
 # Rule to create payment.o (link library header file)
 payment.o: payment.cc tpc_c.h
+	${CXX} -c ${CFLAGS} $^
 
 # Clean up
 clean:
