More work on payment (Thad)

--- a/db/Makefile
+++ b/db/Makefile
@@ -2,26 +2,21 @@
 # Makefile for "TPC-C"					DDBMS
 
 # Standard compiler options
-CFLAGS =  -g3
+PROG = TPC-C
+CFLAGS =  -g3 -Wno-deprecated -lpthread -lm
+SRCS = tpc_c.cc new_order.cc payment.cc ../loadgen/loadgen.cc ../remote.cc ../config.cc ../freeport_config.cc
+OBJS = $(SRCS:.cc=.o)
 
-all:    TPC-C
+all: $(PROG)
+
+# Create objects from .cc files
+%.o: %.cc
+	$(CXX) $(CFLAGS) -o $@ -c $<
 
 # Create TPC-C from tpc_c.o and new_order.o
-TPC-C:  tpc_c.o new_order.o payment.o ../loadgen/loadgen.o ../config.o ../remote.o
-	${CXX} ${CFLAGS} -lm $^ -o $@
-
-# Rule to create tpc_c.o (link library header file)
-tpc_c.o: tpc_c.cc tpc_c.h
-	${CXX} -c ${CFLAGS} tpc_c.cc
-
-# Rule to create new_order.o (link library header file)
-new_order.o: new_order.cc tpc_c.h
-	${CXX} -c ${CFLAGS} new_order.cc
-
-# Rule to create payment.o (link library header file)
-payment.o: payment.cc tpc_c.h
-	${CXX} -c ${CFLAGS} payment.cc
+$(PROG): $(OBJS)
+	$(CXX) $(CFLAGS) -o $(PROG) $(OBJS)
 
 # Clean up
 clean:
-	/bin/rm -f *.o TPC-C
+	rm -f $(PROG) $(OBJS)
