--- a/test.conf
+++ b/test.conf
@@ -1,7 +1,8 @@
-node0=db:3:0:0:127.0.0.1:12110:12111
-node1=db:3:0:1:127.0.0.1:12112:12113
-node2=db:3:0:2:127.0.0.1:12114:12115
-node100=mediator:1:0:0:127.0.0.1:12116
-node200=preprocessor:1:0:0:127.0.0.1:12117
+node0=db:3:0:0:127.0.0.1:12126:12127
+node1=db:3:0:1:127.0.0.1:12128:12129
+node2=db:3:0:2:127.0.0.1:12130:12131
+node100=mediator:1:0:0:127.0.0.1:12132
+node200=preprocessor:1:0:0:127.0.0.1:12133
+wait_time=1000
 binlog=/home/accts/agt5/db/binlog
 scheduler=random
