--- a/mediator/Makefile
+++ b/mediator/Makefile
@@ -4,9 +4,12 @@ CXXFLAGS=-g -O2 -Wall -Wno-deprecated
 LDFLAGS=-lrt # for clock_gettime()
 
 SRCS=main.cc server.cc
-OBJS=$(SRCS:.cc=.o) ../config.o ../remote.o
+OBJS=$(SRCS:.cc=.o) ../config.o ../remote.o ../loadgen/loadgen.o
 
 all: $(PROG)
+
+../loadgen/%.o: ../loadgen/%.cc
+	$(MAKE) -C ../loadgen
 
 ../%.o: ../%.cc
 	$(MAKE) -C ..
