--- a/test.conf
+++ b/test.conf
@@ -1,8 +1,5 @@
-node0=db:3:0:0:127.0.0.1:12158:12159
-node1=db:3:0:1:127.0.0.1:12160:12161
-node2=db:3:0:2:127.0.0.1:12162:12163
-node100=mediator:1:0:0:127.0.0.1:12164
-node200=preprocessor:1:0:0:127.0.0.1:12165
-wait_time=1000
-binlog=/home/accts/agt5/db/binlog
-scheduler=random
+node0=db:1:0:0:10.176.255.240:10861:10862
+node100=mediator:1:0:0:10.176.255.241:10863
+node200=preprocessor:1:0:0:10.176.255.242:10864
+wait_time=50000
+binlog=/tmp/binlog
