Lock manager and database are successfully hooked up.  Load generation was removed from LM, so the only way to communicate with it is to fill the ports.  Also, payment now returns TXN_REDO if the last name doesn't match, but that needs to be implemented in the lock manager because that is the only one who can talk to the mediator/preprocessor.  Finally, logging is added so that logs of sent transaction IDs and received transaction IDs for the LM and DB, respectively, are printed to db.out and lm.out

--- a/db/Makefile
+++ b/db/Makefile
@@ -4,7 +4,7 @@
 # Standard compiler options
 PROG = TPC-C
 CFLAGS =  -g3 -Wno-deprecated -lpthread -lm
-SRCS = tpc_c.cc new_order.cc payment.cc ../loadgen/loadgen.cc ../remote.cc ../config.cc ../freeport_config.cc
+SRCS = tpc_c.cc new_order.cc payment.cc ../remote.cc ../config.cc
 OBJS = $(SRCS:.cc=.o)
 
 all: $(PROG)
